; ModuleID = '/home/carl/AnghaBench/redis/src/extr_config.c_rewriteConfigDirOption.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_config.c_rewriteConfigDirOption.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rewriteConfigState = type { i32 }

@.str = private unnamed_addr constant [4 x i8] c"dir\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rewriteConfigDirOption(%struct.rewriteConfigState* %0) #0 {
  %2 = alloca %struct.rewriteConfigState*, align 8
  %3 = alloca [1024 x i8], align 16
  store %struct.rewriteConfigState* %0, %struct.rewriteConfigState** %2, align 8
  %4 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %5 = call i32* @getcwd(i8* %4, i32 1024)
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load %struct.rewriteConfigState*, %struct.rewriteConfigState** %2, align 8
  %9 = call i32 @rewriteConfigMarkAsProcessed(%struct.rewriteConfigState* %8, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  br label %14

10:                                               ; preds = %1
  %11 = load %struct.rewriteConfigState*, %struct.rewriteConfigState** %2, align 8
  %12 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %13 = call i32 @rewriteConfigStringOption(%struct.rewriteConfigState* %11, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %12, i32* null)
  br label %14

14:                                               ; preds = %10, %7
  ret void
}

declare dso_local i32* @getcwd(i8*, i32) #1

declare dso_local i32 @rewriteConfigMarkAsProcessed(%struct.rewriteConfigState*, i8*) #1

declare dso_local i32 @rewriteConfigStringOption(%struct.rewriteConfigState*, i8*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
